fix: anime page card spacing

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -95,7 +95,7 @@ body {
 
 .anime-page-container {
   width: 90%;
-  margin: 100px auto;
+  margin: 38px auto;
   padding-bottom: 50px;
 
   .back-arrow {
@@ -148,7 +148,7 @@ body {
         font-size: 50px;
 
         @media @mobile {
-          font-size: 20px;
+          font-size: 28px;
         }
       }
 
